<resources>
    <string name="app_name">乐说</string>
    <string name="save">保存</string>
    <string name="nearby">附近</string>
    <string name="natural">圈子</string>
    <string name="message">消息</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="edit_sign_mobile">请输入手机号</string>
    <string name="edit_mobile">请输入手机号</string>
    <string name="edit_sign_pwd">请输入6-20位密码</string>
    <string name="sign_forget">忘记密码?</string>
    <string name="sign_find_pwd">找回密码</string>
    <string name="sign_login">登录</string>
    <string name="sign_register">注册</string>
    <string name="edit_sign_name">请输入用户名</string>
    <string name="edit_sign_code">请输入验证码</string>
    <string name="sign_agreement">《软件许可及服务协议》</string>
    <string name="sign_get_code">获取验证码</string>
    <string name="sign_get_code2">显示密码</string>
    <string name="submit">提交</string>
    <string name="edit_pwd_new_sure">请确认新密码</string>
    <string name="edit_pwd_new">请输入新密码</string>
    <string name="sex_text">性别:</string>
    <string name="sex_select_hint">用户性别一经选定不可修改</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="login_other_model">其他登录方式</string>
    <string name="dynamic">个人动态</string>
    <string name="complaint_title">投诉原因</string>
    <string name="dynamic_detail">动态详情</string>
    <string name="comment">评论</string>
    <string name="mine_setting_agreement">用户协议</string>
    <string name="mine_setting_help">新手指引</string>
    <string name="mine_setting_about">关于我们</string>
    <string name="mine_setting_feedback">意见反馈</string>
    <string name="exit_login">退出登录</string>
    <string name="edit_mine_nickname">请输入昵称</string>
    <string name="edit_mine_mobile">请输入手机号</string>
    <string name="edit_mine_email">请输入电子邮箱</string>
    <string name="select_mine_address">请选择收货地址</string>
    <string name="select_mine_birthday">请选择出生年月</string>
    <string name="sure">确定</string>
    <string name="all">全部</string>
    <string name="cancel">取消</string>
    <string name="nearby_photo">个人相册</string>
    <string name="nearby_dynamic">个人动态</string>
    <string name="private_message">私信</string>
    <string name="leave_message">留言</string>
    <string name="give_a_reward">打赏</string>
    <string name="like">点赞</string>
    <string name="attention_already">已关注</string>
    <string name="attention">关注</string>
    <string name="dynamic_image">发布动态</string>
    <string name="dynamic_video">发布视频</string>
    <string-array name="message_array">
        <item>评论我的</item>
        <item>关注我的</item>
        <item>评论我的</item>
        <item>评论我的</item>
        <item>评论我的</item>
        <item>评论我的</item>
        <item>评论我的</item>
    </string-array>
    <string name="message_comment">评论我的</string>
    <string name="message_attention_me">关注我的</string>
    <string name="message_my_attention">我关注的</string>
    <string name="message_private_letter_me">私信我的</string>
    <string name="message_private">私信</string>
    <string name="message_my_private_letter">我私信的</string>
    <string name="message_customer_service">客服</string>
    <string name="join">加入</string>
    <string name="publish">发布</string>
    <string name="private_letter">私信</string>
    <string name="send">发送</string>
    <string name="find_circle">圈子</string>
    <string name="find_shop">商城</string>
    <string name="find_mood">心情视图</string>
    <string name="radio_mood">七仙女</string>
    <string name="find_activity">活动</string>
    <string name="find_activity_enroll">活动报名</string>
    <string name="find_activity_publish">发布活动</string>
    <string name="find_broadcast">新作榜</string>
    <string name="find_store">店铺</string>
    <string name="find_broadcast_send">发布广播</string>
    <string name="edit_find_broadcast_info">请输入约会内容</string>
    <string name="edit_find_broadcast_error">暂不支持表情</string>
    <string name="edit_find_broadcast_address">请输入约会地点</string>
    <string name="edit_find_broadcast_time">请输入约会时间</string>
    <string name="enroll">报名</string>
    <string name="join_activity">参加活动</string>
    <string name="edit_find_activities_info">请输入活动内容</string>
    <string name="edit_find_activities_detail">请输入活动详情</string>
    <string name="edit_find_activities_time">请输入活动时间</string>
    <string name="edit_find_activities_address">请输入活动地址</string>
    <string name="edit_find_activities_name">请输入活动名称</string>
    <string name="edit_find_activities_price">请输入活动报名费</string>
    <string name="edit_find_activities_vip">您不是VIP不能上传</string>
    <string name="upload_find_activities_image">请上传活动图片</string>
    <string name="edit_find_activities_enroll_mobile">请输入您的电话</string>
    <string name="edit_find_activities_error_mobile">请输入正确的电话号</string>
    <string name="edit_find_activities_enroll_name">请输入您的姓名</string>
    <string name="edit_find_activities_error_name">请输入中文</string>
    <string name="edit_find_activities_enroll_sex">请输入您的性别</string>
    <string name="pay">支付</string>
    <string name="shop_cart">购物车</string>
    <string-array name="find_shop_detail_parameter">
        <item>净含量</item>
        <item>包装方式</item>
        <item>包装种类</item>
        <item>品牌</item>
        <item>系列</item>
        <item>食品口味</item>
        <item>产地</item>
        <item>省份</item>
        <item>生产许可证编号</item>
        <item>厂名</item>
        <item>厂址</item>
    </string-array>
    <string name="find_new_ranking">最新排名</string>
    <string name="find_fans_comment">粉丝留言</string>
    <string name="find_look_record">查看记录</string>
    <string name="find_gift_pay">礼物购买</string>
    <string name="mine_like">点赞我的</string>
    <string name="mine_attention">关注我的</string>
    <string name="mine_comment">评论我的</string>
    <string name="mine_make_friend">我的交友资料</string>
    <string name="mine_earnings">我的收益</string>
    <string name="mine_account">我的账户</string>
    <string name="mine_dynamic">我的动态</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_team">我的团队</string>
    <string name="mine_qr_code">专属二维码</string>
    <string name="mine_vip">升级VIP</string>
    <string name="mine_vip_info">VIP优势</string>
    <string name="mine_pay">充值</string>
    <string name="mine_setting">设置</string>
    <string name="mine_product">我的产品</string>
    <string name="mine_authentication_enterprise">企业认证</string>
    <string name="mine_authentication_person">个人认证</string>
    <string name="mine_record">我的记录</string>
    <string name="mine_model">我是模特</string>
    <string name="bind">绑定</string>
    <string name="mine_shop">上传店铺</string>
    <string name="mine_product_publish">发布商品</string>
    <string name="information">个人信息</string>
    <string name="edit_feedback_hint">想要新功能？使用体验不好？在这里吐槽吧！</string>
    <string name="mine_withdraw">提现</string>
    <string name="ali">支付宝</string>
    <string name="we_chat">微信</string>
    <string name="edit_account_name">请输入您的姓名</string>
    <string name="edit_account_number">请输入您的账户</string>
    <string name="address_add">新增收货地址</string>
    <string name="address_manager">管理收货地址</string>
    <string name="address_select">选择收货地址</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="finish">完成</string>
    <string name="address_normal">默认地址</string>
    <string name="address_name">收货人姓名</string>
    <string name="edit_address_name">请输入收货人姓名</string>
    <string name="address_mobile">手机号码</string>
    <string name="edit_address_mobile">请输入收货人手机号码</string>
    <string name="address_street">街道</string>
    <string name="edit_address_post_code">请输入邮政编码</string>
    <string name="edit_address_detail">请输入详细地址</string>
    <string name="address_select_street">请选择街道</string>
    <string name="edit_id_card_number">请输入身份证号</string>
    <string name="edit_id_card_error_number">请输入正确身份证号</string>
    <string name="edit_real_name">请输入真实姓名</string>
    <string name="edit_company_name">请填写企业名称</string>
    <string name="edit_job">请填写职位</string>
    <string name="edit_mine_shop_name">请输入店铺名称</string>
    <string name="edit_mine_shop_address">请输入店铺地址</string>
    <string name="edit_mine_shop_info">请输入店铺简介</string>
    <string name="model_base_info">基本信息</string>
    <string name="model_like_record">点赞记录</string>
    <string name="model_comment_record">留言记录</string>
    <string name="model_gift_record">礼物记录</string>
    <string name="nothing_left">这个人很懒，什么也没有留下</string>
    <string name="all_price">总金额:</string>
    <string name="area_count_student">学员个数</string>
    <string name="area_count_popularity">总人气值</string>
    <string name="area_count_visit">访问量</string>
    <string name="search">搜索</string>
    <string-array name="mine_array">
        <item>我是学员</item>
        <item>交友资料</item>
        <item>我的账户</item>
        <item>我的动态</item>
        <item>我的订单</item>
        <item>我的团队</item>
        <item>专属二维码</item>
        <item>升级VIP</item>
        
        <item>我的产品</item>
        <item>我的活动</item>
        
        <item>认证</item>
        <item>我的记录</item>
        <item>新手指引</item>
    </string-array>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm:ss </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_yesterday">前天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
    <string name="input_hint">Send message</string>
    <string name="message_click_hint">Message click event</string>
    <string name="message_long_click_hint">Message long press event</string>
    <string name="avatar_click_hint">Avatar click event</string>
    <string name="rationale_record_voice">This app needs access microphone to record voice.</string>
    <string name="rationale_photo">This app needs access photos.</string>
    <string name="rationale_camera">This app needs access camera.</string>
    <string name="edit_product_price">请输入产品价格</string>
    <string name="edit_product_error_price">请输入正确产品价格</string>
    <string name="edit_product_name">请输入产品名称</string>
    <string name="edit_product_info">请填写产品描述</string>
    <string name="upload_product_image">上传产品图片</string>
    <string name="edit_find_activities_mobile">请输入主办方电话</string>
    <string name="close">去结算</string>
    <string name="select_sex">性别</string>
    <string-array name="messages_array">
        <item>How are you</item>
        <item>Fine. And you?</item>
        <item>Me, too. Is there any news today?</item>
        <item>Yep! I got a news here: boom! Tomorrow is the end of The Walking Dead!</item>
        <item>Are you kidding me?</item>
        <item>Absolutely not!</item>
        <item>Jesus, that\'s crazy</item>
        <item>I thought no one would gonna to make it</item>
        <item>That\'s cruel, I don\'t like it, maybe there is a favourable turn</item>
        <item>Hope so</item>
    </string-array>
    <string-array name="conversation">
        <item>test</item>
        <item>History message 1</item>
        <item>History message 2</item>
        <item>History message 3</item>
        <item>History message 4</item>
        <item>History message 5</item>
        <item>History message 6</item>
        <item>History message 7</item>
        <item>History message 8</item>
        <item>History message 9</item>
        <item>History message 10</item>
    </string-array>
</resources>