<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_shape"
    android:orientation="vertical"
    android:showDividers="middle">


    <include layout="@layout/toolbar_title" />

    <TextView
        android:id="@+id/tv_message_comment"
        style="@style/text_message_item"
        android:layout_marginTop="10dp"
        android:drawableLeft="@mipmap/icon_message_comment"
        android:drawablePadding="10dp"
        android:text="@string/message_comment" />

    <TextView
        android:id="@+id/tv_message_attention_me"
        style="@style/text_message_item"
        android:drawableLeft="@mipmap/icon_message_attention_me"
        android:drawablePadding="10dp"
        android:text="@string/message_attention_me" />

    <TextView
        android:id="@+id/tv_message_my_attention"
        style="@style/text_message_item"
        android:drawableLeft="@mipmap/icon_message_my_attention"
        android:drawablePadding="10dp"
        android:text="@string/message_my_attention" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_message_private_letter_me"
            style="@style/text_message_item1"
            android:drawableLeft="@mipmap/icon_message_private_letter_me"
            android:drawablePadding="10dp"
            android:text="@string/message_private" />

        <ImageView
            android:id="@+id/iv_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:layout_toLeftOf="@+id/iv_right"
            android:src="@mipmap/img_point" />

        <ImageView
            android:id="@+id/iv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_right_gray" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_message_my_private_letter"
        style="@style/text_message_item"
        android:drawableLeft="@mipmap/icon_message_my_private_letter"
        android:drawablePadding="10dp"
        android:text="@string/message_my_private_letter"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tv_message_customer_service"
        style="@style/text_message_item"
        android:drawableLeft="@mipmap/icon_message_customer_service"
        android:drawablePadding="10dp"
        android:text="@string/message_customer_service" />
</LinearLayout>