<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_shape"
    android:showDividers="middle">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/tv_setting_agreement"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/mine_setting_agreement"
        android:gravity="center_vertical"
        android:drawableRight="@mipmap/icon_right_gray"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tv_setting_help"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/mine_setting_help"
        android:gravity="center_vertical"
        android:drawableRight="@mipmap/icon_right_gray"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tv_setting_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/mine_setting_about"
        android:gravity="center_vertical"
        android:drawableRight="@mipmap/icon_right_gray"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tv_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/mine_setting_feedback"
        android:gravity="center_vertical"
        android:drawableRight="@mipmap/icon_right_gray"
        android:padding="10dp"
        />


    <TextView
        android:id="@+id/tv_setting_exit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/exit_login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/blue_solid_circle_shape"
        />

</LinearLayout>