<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:id="@+id/rg_mine_model">

    <RadioButton
        android:id="@+id/rb_model_info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/model_tab_bg_selector"
        android:text="@string/model_base_info"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:button="@null"
        />

    <RadioButton
        android:id="@+id/rb_model_like"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/model_tab_bg_selector"
        android:text="@string/model_like_record"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:button="@null"/>

    <RadioButton
        android:id="@+id/rb_model_comment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/model_tab_bg_selector"
        android:text="@string/model_comment_record"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:button="@null"/>

    <RadioButton
        android:id="@+id/rb_model_gift"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/model_tab_bg_selector"
        android:text="@string/model_gift_record"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:button="@null"/>
</RadioGroup>