<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_student_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"
        android:background="@color/white"
        android:src="@mipmap/default_find_student_list"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/white"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_student_list_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/area_count_student"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            />

        <TextView
            android:id="@+id/tv_student_list_popularity_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/area_count_popularity"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            />

        <TextView
            android:id="@+id/tv_student_list_visit_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:text="@string/area_count_visit"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            />
    </LinearLayout>
</LinearLayout>